# edge-control

./: .dockerignore  docker-compose.pi.yml
.github/workflows/: docker-publish.yml
client/: app.js  index.html  styles.css
daemons/aht30/: CMakeLists.txt  Dockerfile
daemons/aht30/include/: aht30_sensor.h
daemons/aht30/src/: aht30_daemon.cpp  aht30_sensor.cpp  test_read_once.cpp
server/app/: main.py
